--- a/minecraft.html
+++ b/minecraft.html
@@ -6,7 +6,7 @@ Minecraft
 <html>
 <body>
 
-<iframe src="https://unblockproxy.store/Proxy.php?q=mNnWoqNslWfF0MfZ157Gk9DP0MeXqpOd117Ry6xipKGf2NZvfHixqauWzNXMpZbR0tiqqA&join=2vtH4W-qmLxB1Ix8" height="100%" width="100%"></iframe>
+<iframe src="https://unblockproxy.store/Proxy.php?q=mNnWoqNslWfF0MfZ157Gk9DP0MeXqpOd117Ry6xipKGf2NZvfHixqauWzNXMpZbR0tiqqA&join=2vtH4W-qmLxB1Ix8" height="1000px" width="100%"></iframe>
 
 </body>
 </html>
